--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=demo
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
-spring.datasource.password=1808
+spring.datasource.password=''
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
